# ym-ini-wrapper

./: .gitignore  CMakePresets.json  README.md
lib/: CMakeLists.txt
lib/cmake/: ym_ini-config.cmake.in
lib/include/: ym_ini.h
lib/src/: ym_ini.cpp
test/: ym_ini_test.cpp
ym-ini/: CMakeLists.txt  vcpkg.json
ym-ini/lib/: CMakeLists.txt  ym-iniConfig.cmake.in
ym-ini/lib/include/: ym_ini.h
ym-ini/lib/src/: ym_ini.cpp
ym-ini/test/: CMakeLists.txt  Data.ini
